kubernetes/service.yml
####################################
# KUBERNETES PODS - PROXY SERVICE
####################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    name: proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      name: proxy
  template:
    metadata:
      labels:
        name: proxy
    spec:
      containers:
        - name: proxy-service
          image: docker.io/705471/proxy-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '256Mi'
              cpu: '256m'
            limits:
              memory: '512Mi'
              cpu: '512m'
      restartPolicy: Always
####################################
# KUBERNETES PODS - USERS SERVICE
####################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    name: users
spec:
  replicas: 3
  selector:
    matchLabels:
      name: users
  template:
    metadata:
      labels:
        name: users
    spec:
      containers:
        - name: users-service
          image: docker.io/705471/users-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '256Mi'
              cpu: '256m'
            limits:
              memory: '512Mi'
              cpu: '512m'
      restartPolicy: Always
####################################
# KUBERNETES PODS - ROLES SERVICE
####################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roles
  labels:
    name: roles
spec:
  replicas: 3
  selector:
    matchLabels:
      name: roles
  template:
    metadata:
      labels:
        name: roles
    spec:
      containers:
        - name: roles-service
          image: docker.io/705471/roles-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: '256Mi'
              cpu: '256m'
            limits:
              memory: '512Mi'
              cpu: '512m'
      restartPolicy: Always
####################################
# KUBERNETES SERVICE - PROXY SERVICE
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    name: proxy
spec:
  selector:
    name: proxy
  ports:
    - name: proxy-service
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
####################################
# KUBERNETES SERVICE - USERS SERVICE
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    name: users
spec:
  selector:
    name: users
  ports:
    - name: users-service
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
####################################
# KUBERNETES SERVICE - ROLES SERVICE
####################################
---
apiVersion: v1
kind: Service
metadata:
  name: roles
  labels:
    name: roles
spec:
  selector:
    name: roles
  ports:
    - name: roles-service
      protocol: TCP
      port: 3100
      targetPort: 3001
  type: ClusterIP
